... - fix: update pinterest donwloader website url - add a command to change the language